--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
                 </div>
               </div>              
             </div>
+            <div class="row">              
+              <div class="col-md-4">
+                <div class="container-member">
+                  <img src="https://avatars2.githubusercontent.com/u/9886072?v=3&u=6e01509d366e4bf650f8c957330851e41ce6a627&s=400">
+                  <div class="">
+                    <h3>Hugo Pablo T. de Araujo</h3>
+                    <p>
+                      Federal Institute of Rio Grande do Norte - IFRN<br />
+                      Undergraduate Student (IFRN - Brazil) 
+                    </p>
+                  </div>
+                </div>
+              </div>              
+            </div>
           </section>
         </div>
         </div>
