--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Spatio-temporal Predictive Analysis of Urban Data</title>
+    <title>MapReduce Design Patters Analysys</title>
     <!-- meta -->
     <meta name="description" content="This project aims the development of an environment for analysis, cleaning and visualization of large amounts of spatio-temporal urban data.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,9 +20,9 @@
           <img alt="The Ohio State University" src="images/layout/osu70.png" />
         </div>
         <div class="container-title">
-          <h1>Spatio-temporal Predictive Analysis of Urban Data</h1>
+          <h1>MapReduce Design Patters Analysys</h1>
           <p>
-            This project aims the development of an environment for analysis, cleaning and visualization of large amounts of spatio-temporal urban data.
+            Objective
           </p>
           <a class="btn btn-primary" href="https://geoguide.herokuapp.com/upload" target="_blank">GeoGuide Environment</a>
         </div>
@@ -30,16 +30,16 @@
           <section>
             <h2>About</h2>
             <p class="container-info-text">
-              This project aims the development of an environment for analysis, cleaning and visualization of large amounts of spatio-temporal urban data. We also consider the definition of algorithms to detect possible unexpected events from the analysis of different datasets.
+              About the project
             </p>
             <p class="container-info-text">
-              This project is a collaboration with Behrooz Omidvar-Tehrani from The Ohio State University (United States).
+              Do a mention to Genoveva
             </p>
             <p class="container-info-text">
-              We will start analysing heterogeneous urban datasets (in CSV, XML and JSON formats) and design a JavaScript-based tool which imports these files and visualize the data on a geographical map. A JavaScript-based tool benefits from being portable, light, efficient and minimally dependent to the system configuration. We also consider defining a generic model for spatio-temporal data and propose recommendation and prediction algorithms.
+              What will we do? And how?
             </p>
             <p class="container-info-text">
-              The results of this project will be a web-based framework that shall be developed to validate the models and algorithms in this research work.
+              Place the aimmed results of this work
             </p>
           </section>
           <section>
