--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p>
             Objective
           </p>
-          <a class="btn btn-primary" href="https://geoguide.herokuapp.com/upload" target="_blank">MapReduce Algorithms</a>
+          <a class="btn btn-primary" href="https://github.com/placidoneto/mapreduce-designpatterns-analysis/tree/master/paper" target="_blank">MapReduce Algorithms</a>
         </div>
         <div class="container-info">
           <section>
