--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
               </div>              
             </div>
             <div class="row">              
+              <div class="col-md-5">
+                <div class="container-member">
+                  <img src="https://avatars2.githubusercontent.com/u/5519579?v=3&s=460">
+                  <div class="">
+                    <h3>Genoveva Vargas-Solar</h3>
+                    <p>
+                      French Council of Scientific Research - CNRS<br />
+                      PhD in Computer Science (University Joseph Fourier - France) 
+                      PhD in Literature (Grenoble Alpes University - France) 
+                    </p>
+                  </div>
+                </div>
+              </div>              
+            </div>
+            <div class="row">              
               <div class="col-md-4">
                 <div class="container-member">
                   <img src="https://avatars2.githubusercontent.com/u/9886072?v=3&u=6e01509d366e4bf650f8c957330851e41ce6a627&s=400">
