--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="container">
       <div class="col-md-10 col-md-offset-1">
         <div class="container-logo">
-          <img alt="IFRN" src="images/layout/ifrn70.png" />
-          <img alt="The Ohio State University" src="images/layout/osu70.png" />
+          <img alt="IFRN" src="https://github.com/GeoGuideProject/geoguideproject.github.io/raw/master/images/layout/ifrn70.png" />          
         </div>
         <div class="container-title">
           <h1>MapReduce Design Patters Analysys</h1>
