--- a/index.html
+++ b/index.html
@@ -43,6 +43,42 @@
           </section>
           <section>
             <h2>Members</h2>
+              <div class="col-md-6">
+                <div class="container-member">
+                  <img src="images/avatar/placido150.jpg">
+                  <div class="">
+                    <h3>Plácido A. Souza Neto</h3>
+                    <p>
+                      Federal Institute of Rio Grande do Norte - IFRN<br />
+                      PhD in Computer Science (UFRN - Brazil)
+                    </p>
+                  </div>
+                </div>
+              </div>  
+            <div class="col-md-6">
+                <div class="container-member">
+                  <img src="images/avatar/placido150.jpg">
+                  <div class="">
+                    <h3>Plácido A. Souza Neto</h3>
+                    <p>
+                      Federal Institute of Rio Grande do Norte - IFRN<br />
+                      PhD in Computer Science (UFRN - Brazil)
+                    </p>
+                  </div>
+                </div>
+              </div>        
+            <div class="col-md-6">
+                <div class="container-member">
+                  <img src="images/avatar/placido150.jpg">
+                  <div class="">
+                    <h3>Plácido A. Souza Neto</h3>
+                    <p>
+                      Federal Institute of Rio Grande do Norte - IFRN<br />
+                      PhD in Computer Science (UFRN - Brazil)
+                    </p>
+                  </div>
+                </div>
+              </div>adasd
             <div class="row">              
               <div class="col-md-6">
                 <div class="container-member">
