--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <h3>Genoveva Vargas-Solar</h3>
                   <p>
                     French Council of Scientific Research - CNRS<br />
-                    PhD in Computer Science (University Joseph Fourier - France) 
+                    PhD in Computer Science (University Joseph Fourier - France)<br /> 
                     PhD in Literature (Grenoble Alpes University - France) 
                   </p>
                 </div>
