--- a/index.html
+++ b/index.html
@@ -41,47 +41,47 @@
               Place the aimmed results of this work
             </p>
           </section>
-          <section>
+                    <section>
             <h2>Members</h2>
-            <div class="row">              
+            <div class="row">
               <div class="col-md-6">
                 <div class="container-member">
-                  <img src="https://avatars1.githubusercontent.com/u/1442478?v=3&s=400">
+                  <img src="images/avatar/behrooz150.jpg"><img src="https://avatars1.githubusercontent.com/u/1442478?v=3&s=400">
                   <div class="">
                     <h3>Plácido A. Souza Neto</h3>
                     <p>
                       Federal Institute of Rio Grande do Norte - IFRN<br />
                       PhD in Computer Science (UFRN - Brazil)
-                    </p>
+		                </p>
                   </div>
                 </div>
-              </div>              
-            </div>                        
-            <div class="col-md-6">
-              <div class="container-member">
-                <img src="https://avatars2.githubusercontent.com/u/5519579?v=3&s=460">
+              </div>
+              <div class="col-md-4">
+                <div class="container-member">
+                  <img src="https://avatars2.githubusercontent.com/u/5519579?v=3&s=460">
                 <div class="">
                   <h3>Genoveva Vargas-Solar</h3>
                   <p>
                     French Council of Scientific Research - CNRS<br />
                     PhD in Computer Science (University Joseph Fourier - France)<br /> 
-                    PhD in Literature (Grenoble Alpes University - France) 
+		                PhD in Literature (Grenoble Alpes University - France) 
                   </p>
+                  </div>
                 </div>
               </div>
-            </div>                                                 
-            <div class="col-md-4">
-              <div class="container-member">
-                <img src="https://avatars2.githubusercontent.com/u/9886072?v=3&u=6e01509d366e4bf650f8c957330851e41ce6a627&s=400">
+              <div class="col-md-4">
+                <div class="container-member">
+                  <img src="https://avatars2.githubusercontent.com/u/9886072?v=3&u=6e01509d366e4bf650f8c957330851e41ce6a627&s=400">
                 <div class="">
                   <h3>Hugo Pablo T. de Araujo</h3>
                   <p>
                     Federal Institute of Rio Grande do Norte - IFRN<br />
                     Undergraduate Student (IFRN - Brazil) 
-                  </p>
+		              <p>
+                  </div>
                 </div>
               </div>
-            </div>                       
+            </div>
           </section>
         </div>
         </div>
