--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
               Place the aimmed results of this work
             </p>
           </section>
-                    <section>
+          <section>
             <h2>Members</h2>
             <div class="row">
               <div class="col-md-6">
                 <div class="container-member">
-                  <img src="images/avatar/behrooz150.jpg"><img src="https://avatars1.githubusercontent.com/u/1442478?v=3&s=400">
+                  <img src="https://avatars1.githubusercontent.com/u/1442478?v=3&s=400">
                   <div class="">
                     <h3>Plácido A. Souza Neto</h3>
                     <p>
                       Federal Institute of Rio Grande do Norte - IFRN<br />
                       PhD in Computer Science (UFRN - Brazil)
-		                </p>
+		     </p>
                   </div>
                 </div>
               </div>
@@ -64,7 +64,7 @@
                   <p>
                     French Council of Scientific Research - CNRS<br />
                     PhD in Computer Science (University Joseph Fourier - France)<br /> 
-		                PhD in Literature (Grenoble Alpes University - France) 
+		    PhD in Literature (Grenoble Alpes University - France) 
                   </p>
                   </div>
                 </div>
@@ -77,7 +77,7 @@
                   <p>
                     Federal Institute of Rio Grande do Norte - IFRN<br />
                     Undergraduate Student (IFRN - Brazil) 
-		              <p>
+		  <p>
                   </div>
                 </div>
               </div>
